<resources>
    <string name="app_name">Calculadora Interactiva</string>
    <string name="operacion">Operación</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="Borrar">Borrar</string>
    <string name="Revisar">Revisar</string>
    <string name="Aciertos">Aciertos</string>
    <string name="Fallos">Fallos</string>
    <string name="Porcentaje">Porcentaje</string>
    <string name="Record">Record</string>
    <string name="Reiniciar">Reiniciar</string>
    <string name="Inicio">Inicio</string>
    <string name="Estadisticas">Estadisticas</string>
</resources>