<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="Operación"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewOp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textViewRes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_8" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:orientation="horizontal"
        android:showDividers="middle">
        <Button
            android:id="@+id/buttonBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Borrar" />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_0" />

        <Button
            android:id="@+id/buttonComprobar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12dp"
            android:text="@string/Revisar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:divider="@drawable/divider"
        android:orientation="horizontal"
        android:showDividers="middle">


        <TextView
            android:id="@+id/textViewNulo"
            android:layout_width="427dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="7"
            android:textSize="30sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/buttonReiniciar"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Reiniciar"
            android:visibility="gone"
            android:textSize="12dp" />

        <Button
            android:id="@+id/buttonInicio"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Inicio"
            android:textSize="12dp" />
        <TextView
            android:id="@+id/textViewNulo6"
            android:layout_width="422dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="1"
            android:textSize="30sp"
            android:visibility="invisible" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewNulo4"
        android:layout_width="422dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="3"
        android:textSize="30sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textViewAciertos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Aciertos"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewFallos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/Aciertos"
        android:textSize="30sp"
        android:textColor="@android:color/holo_blue_dark"/>
        />

    <TextView
        android:id="@+id/textViewPorcentaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/Aciertos"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/Record"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/textViewNulo2"
        android:layout_width="422dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="5"
        android:textSize="30sp"
        android:visibility="invisible" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textViewNulo3"
        android:layout_width="422dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="5"
        android:textSize="30sp"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:divider="@drawable/divider"
        android:orientation="horizontal"
        android:showDividers="middle">


        <TextView
            android:id="@+id/textViewNulo5"
            android:layout_width="427dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="7"
            android:textSize="30sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/buttonEstadisticas"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Estadisticas"
            android:textSize="9dp" />
        <TextView
            android:id="@+id/textViewNulo1"
            android:layout_width="422dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="1"
            android:textSize="30sp"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>